--- a/hello.appzui/public/stylesheets/style.css
+++ b/hello.appzui/public/stylesheets/style.css
@@ -1,8 +1,178 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+html{
+  background: linear-gradient(#08f, #fff);
+  padding: 40px;  
+  height: 900px;  
+  width:  900px;
 }
 
-a {
-  color: #00B7FF;
+fieldset {
+	border:0px;
+}
+
+.switchlabel {
+	color: #B4886B;
+	font-weight: bold;
+	display: block;
+	width: 250px;
+}
+
+.controlform{
+  background: #fff;
+  width: 400px;
+  height: 400px;
+  border-radius: 10px;
+  float:left;
+  border: solid 5px #ccc;
+  position:relative;
+}
+
+/* trafffic light */
+
+.trafficlight{
+  background: #222;
+  background-image: linear-gradient(transparent 2%, #111 2%, transparent 3%, #111 30%);
+  width: 170px;
+  height: 400px;
+  border-radius: 10px;
+  position: relative;
+  border: solid 5px #333;
+  margin-left: 450px;
+}
+
+.light{
+  background-size: 5px 5px; 
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.redon, .red:hover {
+  background: red;
+  background-image: radial-gradient(red, transparent);
+  top: 20px;
+  left: 35px;
+  box-shadow: 
+    0 0 20px #111 inset,
+    0 0 10px red;
+}
+
+.red {
+  background: brown;
+  background-image: radial-gradient(brown, transparent);
+  top: 20px;
+  left: 35px;
+}
+
+.yellowon, .yellow:hover {
+  background: yellow;
+  background-image: radial-gradient(orange, transparent);
+  top: 145px;
+  left: 35px;
+  box-shadow: 
+    0 0 20px #111 inset,
+    0 0 10px yellow;
+}
+
+.yellow {
+  background: brown;
+  background-image: radial-gradient(orange, transparent);
+  top: 145px;
+  left: 35px;
+}
+
+.greenon, .green:hover {
+  background: green;
+  background-image: radial-gradient(lime, transparent);
+  top: 270px;
+  left: 35px;
+  box-shadow: 
+    0 0 20px #111 inset,
+    0 0 10px lime;
+}
+
+.green {
+  background: brown;
+  background-image: radial-gradient(lime, transparent);
+  top: 270px;
+  left: 35px;
+}
+
+/* Switch  */
+
+.onoffswitch {
+    position: relative; 
+    width: 112px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 20px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    -moz-transition: margin 0.3s ease-in 0s; -webkit-transition: margin 0.3s ease-in 0s;
+    -o-transition: margin 0.3s ease-in 0s; transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 48px; padding: 0; line-height: 48px;
+    font-size: 22px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "ON";
+    padding-left: 15px;
+    background-color: #34A7C1; color: #FFFFFF;
+}
+.onoffswitch-inner:after {
+    content: "OFF";
+    padding-right: 15px;
+    background-color: #EEEEEE; color: #999999;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; 
+    width: 18px; 
+    height:20px;
+    margin: 15px;
+    background: #FFFFFF;
+    border: 2px solid #999999; border-radius: 20px;
+    position: absolute; top: 0; bottom: 0; right: 60px;
+    -moz-transition: all 0.3s ease-in 0s; -webkit-transition: all 0.3s ease-in 0s;
+    -o-transition: all 0.3s ease-in 0s; transition: all 0.3s ease-in 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px; 
+}
+
+/*  Table */
+
+table { 
+color: #333;
+font-family: Helvetica, Arial, sans-serif;
+width: 640px; 
+border-collapse: 
+collapse; border-spacing: 0; 
+}
+
+td, th { 
+border: 1px solid transparent; /* No more visible border */
+height: 30px; 
+transition: all 0.3s;  /* Simple transition for hover effect */
+}
+
+th {
+background: #DFDFDF;  /* Darken header a bit */
+font-weight: bold;
+}
+
+td {
+background: #FAFAFA;
+text-align: center;
 }
