--- a/hello.appzui/views/layout.jade
+++ b/hello.appzui/views/layout.jade
@@ -3,5 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/javascripts/jquery-1.11.2.min.js')
+    script(src='/socket.io/socket.io.js')
+    script(src='/javascripts/main.js')    
   body
     block content
