--- a/hello.appzui/public/stylesheets/style.css
+++ b/hello.appzui/public/stylesheets/style.css
@@ -11,6 +11,11 @@ fieldset {
 	margin-left:40px;  
 }
 
+select {
+  -webkit-appearance: none;
+  font-size: 22px;
+  padding:5px 5px 5px 5px;
+}
 .switchlabel {
 	color: #B4886B;
 	font-weight: bold;
@@ -177,4 +182,33 @@ font-weight: bold;
 td {
 background: #FAFAFA;
 text-align: center;
+}
+
+/* button */
+
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
